--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!-- ABOUT -->
     <section id="About"> 
-      <div class="container">
+      <div class="container-sm">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>About Me</h2>
